project/stage/parse_tests/tests/reject/bad_var_decl/after_print_float.ul
boolean f(int m) {
    print 0.1;
    void meep;
}
